# Dingtai

./: .gitignore  AGENTS.md  README.md  environment_dingtai_py310.yml  environment_dingtai_py312.yml  orbbec_device_profiles.md  pyrightconfig.json  ruff.toml  service.py  无忧QMLinker与ARM服务操作指南.md  软件规划.md
.codex/: hooks.json
Log/: OrbbecSDK.log.txt
camera_pipeline/: README.md  __init__.py  client.py  pipeline_context.py  ports.py  service.py  unified_protocol.py  unified_service.py  unified_transport.py
config/: robot_network.toml
debug/: camera_info.md  generate_april_tag_markers.py  generate_apriltag_layout.py  generate_aruco_markers.py  get_Intrinsic_Extrinsic.py  get_info.py  probe_xcoresdk_csv_ik_paths.py  test_camera.py  test_handeye_math.py  test_pointcloud.py  test_pointcloud_camera_param_compare.py  test_pointcloud_multiframe_fusion.py  visualize_pose_csv_xcoresdk.py
experiments/: ar5_matplotlib_interactive_sim.py  ar5_pyside6_interactive_sim.py  arch  collect_rect_marker_prior.py  estimate_grasp.py  frame_protocol.py  practical_color_coarse_registration.py  read_orbbec_frame_async_capture.py  test_apriltag_color_space_eval.md  test_apriltag_color_space_eval.py  test_colored_pointcloud_registration.py  test_occ_cad_visible_faces_to_pointcloud.py  test_orbbec_frame_async_capture.py  zmq_cam_client.py  (+9 more)
test/simulation/luoshi_AR5/AR5-5_07R-W4C4A2-S1_description/: package.xml
test/simulation/luoshi_AR5/AR5-5_07R-W4C4A2-S1_description/launch/: direct_teach.launch
test/simulation/luoshi_AR5/AR5-5_07R-W4C4A2-S1_description/urdf/: AR5-5_07R-W4C4A2-S1.urdf
(+444 files in other folders)
